--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -25,6 +25,9 @@ jobs:
         with:
           name: linux-release
           path: ./streamline
+
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: ./streamline
