--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -31,3 +31,5 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: ./streamline
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
