--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -30,6 +30,5 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
+          name: linux-release
           files: ./streamline
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
