--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           name: linux-release
           files: ./streamline
